adding username to tweets

--- a/Introduction to Text as Data.ipynb
+++ b/Introduction to Text as Data.ipynb
@@ -406,19 +406,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "stm v1.3.3 (2018-1-26) successfully loaded. See ?stm for help. \n",
+      " Papers, resources, and other materials at structuraltopicmodel.com\n"
+     ]
+    }
+   ],
    "source": [
-    "library(stm)\n",
-    "library(stringr)"
+    "library(stm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in open.connection(con, \"rb\"): HTTP error 404.\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in open.connection(con, \"rb\"): HTTP error 404.\nTraceback:\n",
+      "1. read_csv(\"https://github.com/alexhannna/unm-text-as-data/sotu-text.csv\", \n .     col_names = c(\"tweet\"))",
+      "2. read_delimited(file, tokenizer, col_names = col_names, col_types = col_types, \n .     locale = locale, skip = skip, comment = comment, n_max = n_max, \n .     guess_max = guess_max, progress = progress)",
+      "3. read_connection(file)",
+      "4. open(con, \"rb\")",
+      "5. open.connection(con, \"rb\")"
+     ]
+    }
+   ],
    "source": [
     "sotu_tweets <- read_csv('https://github.com/alexhannna/unm-text-as-data/sotu-text.csv', \n",
     "                        col_names = c('tweet'))"
