finishing up stm

--- a/Introduction to Text as Data.ipynb
+++ b/Introduction to Text as Data.ipynb
@@ -405,45 +405,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 99,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "stm v1.3.3 (2018-1-26) successfully loaded. See ?stm for help. \n",
-      " Papers, resources, and other materials at structuraltopicmodel.com\n"
-     ]
-    }
-   ],
    "source": [
-    "library(stm)"
+    "As a last exercise, we'll be working with topic models. As noted above, topic models have gained a lot of traction within the sociology of culture, political science, and the digital humanities. They allow us to generate a probability distribution of topics over both our words and documents. Unlike ideological scaling methods, topics are interpreted *post hoc*, so it's up to the researcher to interpret what each topic is about. Topic models are a mixed membership model, which means that words and documents can belong to mulitple topics."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 100,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in open.connection(con, \"rb\"): HTTP error 404.\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in open.connection(con, \"rb\"): HTTP error 404.\nTraceback:\n",
-      "1. read_csv(\"https://github.com/alexhannna/unm-text-as-data/sotu-text.csv\", \n .     col_names = c(\"tweet\"))",
-      "2. read_delimited(file, tokenizer, col_names = col_names, col_types = col_types, \n .     locale = locale, skip = skip, comment = comment, n_max = n_max, \n .     guess_max = guess_max, progress = progress)",
-      "3. read_connection(file)",
-      "4. open(con, \"rb\")",
-      "5. open.connection(con, \"rb\")"
-     ]
-    }
-   ],
    "source": [
-    "sotu_tweets <- read_csv('https://github.com/alexhannna/unm-text-as-data/sotu-text.csv', \n",
-    "                        col_names = c('tweet'))"
+    "For this exercise, we're going to use the [structural topic model](https://www.structuraltopicmodel.com/) or `stm` package, which was developed by political scientists Molly Roberts, Brandon Stewart, and Dustin Tingley. The structured topic model provides a fast implementation of topic models but also provides the added bonus in that you can incorporate document-level covariates into the model itself and associated topics with those covariates. Imagine incorporating the effect of calendar time, party, and ideology into document analysis of Congressional press releases or floor speeches."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We most likely won't get into analyzing covariates today, however. But I do want to demonstrate how to use `stm` with `tidytext` and how to begin interpreting topic models. We'll begin by loading `stm`, as well as two other packages we need for the analysis: `stringr` (for string manipulation) and `RCurl` (allows us to download from the web). If neither are installed, you can do `install.packages` on them."
    ]
   },
   {
@@ -452,7 +431,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sotu_tweets$id <- seq(1, nrow(sotu_tweets))"
+    "library(stm)\n",
+    "library(stringr)\n",
+    "\n",
+    "## if this doesn't exist: install.packages('RCurl')\n",
+    "library(RCurl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As for data, we're pulling a sample of tweets made during the 2018 State of the Union address and using the hashtag *#sotu*."
    ]
   },
   {
@@ -461,14 +451,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## remove links\n",
-    "## unnest\n",
-    "## remove stopwords\n",
-    "tidy_sotu_tweets <- sotu_tweets %>% \n",
-    "    mutate(tweet = str_replace(tweet, 'https://.+', '')) %>%\n",
-    "    unnest_tokens(word, tweet) %>%\n",
+    "tweets <- getURL('http://alex-hanna.com/research/sotu-text.csv', .encoding = 'UTF-8')\n",
+    "tweets <- read_csv(tweets)\n",
+    "tweets <- tweets %>% mutate(id = as.character(id))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To preprocess these tweets, we're going to do a little more cleaning on the front end. First we're going to use `stringr` to remove any links (strings which begin with https) from the tweets. The default way that `unnest_tokens` tokenizes makes the results a bit weird. We're also going to remove *sotu* and *trump*, because both end up being pretty meaningless words in the analysis but end up being prevalent across many topics."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tidy_tweets <- tweets %>% \n",
+    "    mutate(text = str_replace(text, 'https://.+', '')) %>%\n",
+    "    unnest_tokens(word, text) %>%\n",
     "    anti_join(stop_words) %>%\n",
-    "    filter(word != \"sotu\")"
+    "    filter(!word %in% c(\"sotu\", \"trump\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we're going to convert the words from tidy format into a format more familiar to `stm`, which is a document-frequency matrix (dfm), using `cast_dfm`. In a word, each row of the dfm represents a document, while each column is a frequency count of a particular token. We feed into `cast_dfm` a document ID (in this case our tweet ID) plus a count for each word in that document.  "
    ]
   },
   {
@@ -477,19 +489,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sotu_dfm <- tidy_sotu_tweets %>% \n",
-    "    count(id, word, sort = TRUE) %>%\n",
+    "tweet_dfm <- tidy_tweets %>% \n",
+    "    count(id, word) %>%\n",
     "    cast_dfm(id, word, n)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "topic_model <- stm(sotu_dfm, K = 10, \n",
-    "                   verbose = FALSE, init.type = \"Spectral\")"
+    "Lastly, we are able to use the workhorse function of the `stm`, conveniently called `stm`. We provide a number of topics for the model to fit. You can play around a bit with this, depending on your domain knowledge. There's a literature on how to pick topic numbers which is beyond the scope of this workshop, however. For simplicity, we'll consider 8."
    ]
   },
   {
@@ -498,7 +507,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "summary(topic_model)"
+    "k <- 8\n",
+    "topic_model <- stm(tweet_dfm, K = k, verbose = FALSE, init.type = \"Spectral\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After generating the topic model, we can convert it back to tidy format with `tidy`. Without any additional arguments, this will provide a data frame with three columns: topic, term, and beta, which is the probability that the word should go with that particular topic. We'll store in this in `td_beta`."
    ]
   },
   {
@@ -508,6 +525,13 @@
    "outputs": [],
    "source": [
     "td_beta <- tidy(topic_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once stored, we can plot the probabilities for each topic. The code below takes the first 10 words within each topic and plots their beta within each topic."
    ]
   },
   {
@@ -522,12 +546,67 @@
     "    ungroup() %>%\n",
     "    mutate(topic = paste0(\"Topic \", topic), term) %>%\n",
     "    ggplot(aes(term, beta, fill = as.factor(topic))) +\n",
-    "    geom_col(alpha = 0.8, show.legend = FALSE) +\n",
+    "    geom_col(show.legend = FALSE) +\n",
     "    facet_wrap(~ topic, scales = \"free\") +\n",
     "    coord_flip() +\n",
     "    labs(x = NULL, y = expression(beta),\n",
     "         title = \"Highest word probabilities for each topic\",\n",
     "         subtitle = \"Different words are associated with different topics\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's take a second to try to interpret each of these topics. What could we tenatively call each of these topics?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also retrieve the probability that each document belongs to each topic. With `tidy` and the keyword argument `matrix = \"gamma\"`, we can get that probability, also called \"gamma\". Using the keyword argument `document_names` allows us to associate it with each particular document ID."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "td_gamma <- tidy(topic_model, matrix = \"gamma\",\n",
+    "                document_names = rownames(tweet_dfm))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lastly, we can use `summarize` to get the topic which has the highest probability and associate with the document more definitively. Then, we will join the result to our original tweet data frame. Let's look at the each tweet. Did it seem to track the topics we outlined earlier?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweet_topics <- td_gamma %>% \n",
+    "    group_by(document) %>%\n",
+    "    summarize(max_topic = topic[which(gamma == max(gamma))]) %>%\n",
+    "    ungroup() %>%\n",
+    "    inner_join(tweets, by = c(\"document\" = \"id\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion\n",
+    "\n",
+    "This is a very, very brief introduction to Text as Data methods in R. We covered counting words, comparing documents, and touched on topic modeling. You should have a sense of how to begin counting words and developing quantitive insights from text.\n",
+    "\n",
+    "For further reading, there is an incredibly [large number of tools](https://cran.r-project.org/web/views/NaturalLanguageProcessing.html) in R for doing TAD. For another intervention from within political science, you should check out the [`quanteda` project](https://docs.quanteda.io/) by Kenneth Benoit and others. For more reading on `tidytext`, check out the [*Text Mining for R* book](https://www.tidytextmining.com/) by Julia Silge and David Robinson. "
    ]
   }
  ],
