authoring info is superfluous

--- a/Introduction to Text as Data.ipynb
+++ b/Introduction to Text as Data.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "# Introduction to Text as Data\n",
     "\n",
-    "## UNM Workshop, April 9, 2018\n",
-    "\n",
-    "Alex Hanna, PhD ([Email](alex.hanna@utoronto.ca) | [GitHub](https://github.com/alexhanna) | [Web](alex-hanna.com))"
+    "## UNM Workshop, April 9, 2018"
    ]
   },
   {
