updating typos second sections

--- a/Introduction to Text as Data.ipynb
+++ b/Introduction to Text as Data.ipynb
@@ -69,14 +69,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's start with single text, in this case, Mary Wollenstonecraft's *A Vindication of the Rights of Woman*. This work is considered a cornerstone of political philosophy in first-wave feminism. Inspired by Laura Nelson's own interrogation of feminist texts, let's start digging into some of its language."
+    "Let's start with single text, in this case, Mary Wollenstonecraft's *A Vindication of the Rights of Woman*. This work is considered a cornerstone of political philosophy in first-wave feminism. Let's start digging into some of its language."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First let's load the `tidyverse`, `tidytext`, and `gutenbergr`, a package developed by David Robinson which allows us to easily load in books from Project Gutenberg with only an numerical ID or a title."
+    "First let's load the `tidyverse`, `tidytext`, and `gutenbergr`, the last of which is a package developed by David Robinson which allows us to easily load in books from Project Gutenberg with only an numerical ID or a title."
    ]
   },
   {
@@ -111,11 +111,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Project Gutenberg gives us a text as a set of lines. Next, we're going to use one of the workhorse \"verbs\" of `tidytext` to convert text to lowercase and *tokenize* the text.  \n",
+    "Project Gutenberg gives us a text as a set of lines. Next, we're going to use one of the workhorse \"verbs\" of `tidytext` -- `unnest_tokens` -- to convert text to lowercase and *tokenize* the text.  \n",
     "\n",
     "On the level of meaning, the lowercase and uppercase of a word generally mean the same thing (sometimes they don't, though. For instance, an SMS saying 'Thank you.' means something different from one saying 'THANK YOU.'). But for the most part, we will want to convert to lowercase.\n",
     "\n",
-    "Secondly, we want to split the text by some kind of rule. This is the process of tokenization. For many applications, we mostly want to split by individual words and remove punctuation. \n",
+    "Secondly, we want to split the text in \"tokens\" by some kind of rule. This is the process of tokenization. For many applications, we mostly want to split by individual words and remove punctuation. \n",
     "\n",
     "`unnest_tokens` takes two mandatory arguments in this format -- the output column name and the input column name. We can call the output column `word`."
    ]
