--- a/Introduction to Text as Data.ipynb
+++ b/Introduction to Text as Data.ipynb
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The output of `unnest_tokens` with no other arguments is a list of each word (or token) in order. For some purposes, we may also want to use conjunctions of multiple words, or n-grams. This allows us to have a little more context for the word. For instance, there's more meaning in \"white house\" than in \"white\" or \"house\" alone. "
+    "The output of `unnest_tokens` with no other arguments is a list of each word (or token) in order. For some purposes, we may also want to use conjunctions of multiple words, what are called *ngrams*. This allows us to have a little more context for the word. For instance, there's more meaning in \"white house\" than in \"white\" or \"house\" alone. "
    ]
   },
   {
@@ -218,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this analysis, we see that Wollstonecraft is using much more universalist language, with *fellow creatures*, *sufficient strength*, and *common sense*.\n",
+    "In this analysis, we see that in the most common bigrams, Wollstonecraft is using more universalist language, such as *fellow creatures*, *sufficient strength*, and *common sense*.\n",
     "\n",
     "Now it's your turn!"
    ]
@@ -281,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next thing we're going to do is smush together the tidy data frames for each author."
+    "The next thing we're going to do is smush together the tidy data frames for each author. The `mutate` verb adds a new column to a data frame. `bind_rows` adds two data frames together sequentially."
    ]
   },
   {
@@ -346,14 +346,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What we can begin to see here is that Mills uses the word woman more than Wollstonecraft, but also uses more legalistic language: *law, power, human*, and *social*. Meanwhile, Wollstonecraft uses much more gendered language: *virtue, love, heart*, and *understanding*, although *mind* and *reason* are important exceptions."
+    "What we can begin to see here is that Mills uses the word *women* more than Wollstonecraft, but also uses more legalistic language: *law, power, human*, and *social*. Meanwhile, Wollstonecraft uses much more gendered language: *virtue, love, heart*, and *understanding*, although *mind* and *reason* are important exceptions."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's visualize these results with `ggplot2`, which will allow us to more readily see the scale of difference. We're going to take the top 10 positive and top 10 negative words. `mutate` here reorders them such that the list is ordered by `diffprop`. We'll draw a bar graph with `geom_col` and flip the graph on it's side with `coord_flip`. We'll add a label for good measure."
+    "Now, let's visualize these results with `ggplot2`, which will allow us to more readily see the scale of difference. We're going to take the top 10 positive and top 10 negative words. `mutate` here reorders them such that the list is ordered by `diffprop`. We'll draw a bar graph with `geom_col` and flip the graph on its side with `coord_flip`. We'll add a label for good measure."
    ]
   },
   {
